hphp/hack/test/typecheck/const_visibility.php.exp
File "const_visibility.php", line 4, characters 3-31:
Class constants cannot have visibility modifiers in Hack files (Parsing[1002])
